<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barrels" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/language_menu"
        style="@style/ararat_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin_19"
        android:layout_marginEnd="@dimen/standard_margin_19"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/eng"
        android:textSize="@dimen/standard_text_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ararat_logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/ararat_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ararat_logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/enter_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enter_button"
        style="@style/ararat_gold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:contentDescription="@string/enter_button"
        android:gravity="center"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/enter"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="@id/button" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/day"
        style="@style/ararat_gold"
        android:layout_width="0dp"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="@dimen/standard_text_16"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/ararat_gold"
        android:hint="@string/day"
        android:inputType="number"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:textColorHint="@color/ararat_gold"
        app:layout_constraintBottom_toTopOf="@+id/enter_button"
        app:layout_constraintEnd_toStartOf="@+id/month"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/month"
        style="@style/ararat_gold"
        android:layout_width="0dp"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="@dimen/standard_text_16"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/ararat_gold"
        android:hint="@string/month"
        android:inputType="number"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:textColorHint="@color/ararat_gold"
        app:layout_constraintBottom_toTopOf="@+id/enter_button"
        app:layout_constraintEnd_toStartOf="@+id/year"
        app:layout_constraintStart_toEndOf="@+id/day" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/year"
        style="@style/ararat_gold"
        android:layout_width="0dp"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="@dimen/standard_text_16"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/ararat_gold"
        android:hint="@string/year"
        android:inputType="number"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:textColorHint="@color/ararat_gold"
        app:layout_constraintBottom_toTopOf="@+id/enter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/month" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_of_birth"
        style="@style/ararat_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/date_of_birth"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@id/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/not_correct"
        style="@style/ararat_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_19"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/please_enter_correct_date"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/under18"
        style="@style/ararat_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_19"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/you_re_under_18_years_of_age"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/empty"
        style="@style/ararat_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_19"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/lease_fill_in_all_the_fields"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/month" />

</androidx.constraintlayout.widget.ConstraintLayout>