<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barrels" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ararat_logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/ararat_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ararat_logo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/enter_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_button"
        style="@style/ararat_gold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:contentDescription="@string/enter_button"
        android:gravity="center"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/about"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/button1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/enter_button"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contacts_button"
        style="@style/ararat_gold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:contentDescription="@string/enter_button"
        android:gravity="center"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/contacts"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/enter_button"
        app:layout_constraintBottom_toTopOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/carboy_volume_button"
        style="@style/ararat_gold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:gravity="center"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/carboy_volume"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/enter_button"
        app:layout_constraintBottom_toTopOf="@id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tank_volume_button"
        style="@style/ararat_gold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:gravity="center"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/tank_volume"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button4"
        app:layout_constraintStart_toStartOf="@id/button4" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/enter_button"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/barrel_volume_button"
        style="@style/ararat_gold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_52"
        android:layout_marginHorizontal="65dp"
        android:gravity="center"
        android:shadowColor="@color/ararat_brown"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/barrel_volume"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button5"
        app:layout_constraintStart_toStartOf="@id/button5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin_16"
        android:layout_marginTop="@dimen/standard_margin_19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
</androidx.constraintlayout.widget.ConstraintLayout>